Add win and lose state

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
         <div id="status"></div>
+        <div id="score"></div>
     </div>
     
 </body>
